# netology_home_work_21

./: README.md
Task_1/: CMakeLists.txt  source.cpp
Task_2/: CMakeLists.txt  EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangles.cpp  Rectangles.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  source.cpp
